# vaen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: index.html  quick-start.md  styles.css
examples/shiv-codex-setup/: agent.yaml
examples/synthetic-fixture/: agent.yaml
examples/synthetic-fixture/instructions/: AGENTS.md  style.md
examples/synthetic-fixture/skills/code-review/: SKILL.md
examples/synthetic-fixture/skills/refactor/: SKILL.md
src/vaen/: __init__.py  __main__.py  build.py  bundle.py  cli.py  doctor.py  errors.py  importer.py  inspect.py  manifest.py  secret_scan.py
tests/: test_build_inspect_oci.py  test_bundle_composition_matrix.py  test_cleanup_command.py  test_client_default_target_mapping.py  test_doctor_behavior.py  test_import_atomicity.py  test_import_layout.py  test_import_root_shim_conflicts.py  test_import_skill_mirror_conflicts.py  test_import_target_validation.py  test_manifest_validation.py  test_mcp_claude_import_output.py  test_mcp_codex_import_output.py  test_mcp_copilot_import_output.py  test_mcp_doctor_canonical_checks.py  test_mcp_http_headers.py  test_mcp_import_client_required.py  test_mcp_stdio_env_vars.py  test_secret_scan.py  test_skill_formats.py
